infrastructure/mesh/istio/virtualservice-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payments-canary-router
  namespace: default
spec:
  hosts:
    - payments.kubelab.internal
  gateways:
    - mesh
    - kubelab-ingress-gateway
  http:
    - match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: payments.default.svc.cluster.local
            subset: v2
          weight: 100
    - route:
        - destination:
            host: payments.default.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: payments.default.svc.cluster.local
            subset: v2
          weight: 10
      timeout: 3s
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: "5xx,connect-failure,refused-stream"
