infrastructure/mesh/istio/virtualservice-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service-chaos
  namespace: default
spec:
  hosts:
    - order-api.default.svc.cluster.local
  http:
    - fault:
        delay:
          percentage:
            value: 15.0
          fixedDelay: 2s
        abort:
          percentage:
            value: 10.0
          httpStatus: 503
      route:
        - destination:
            host: order-api.default.svc.cluster.local
